--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,32 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">>
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <title>Домашняя</title>
 </head>
+<nav class="navbar navbar-dark bg-primary">
+    <h1 class="text-white mb-0 nav justify-content-center">Привет, друг! Пройди по нужной ссылке;)</h1><!-- Navbar content -->
+    <ul class="navbar-nav px-3">
+        <li class="nav-item text-nowrap">
+            <a class="nav-link nav_logout" th:href="@{/login}">Вход</a>
+        </li>
+    </ul>
+</nav>
 <body>
-<h2>Hello, friend! </h2>
-<a th:href="@{/login}">Tap this, please</a>
-<a th:href="@{/admin}">Admin panel</a>
-<a th:href="@{/user}">For users</a>
+    <div class="container mt-5 px-lg-5">
+        <div class="row align-items-center">
+           <a class="btn mt-2 btn-primary" href="login" role="button">Вход</a>
+            <a class="btn mt-2 btn-primary" href="admin" role="button">Панель администратора</a>
+            <a class="btn mt-2 btn-primary" href="user" role="button">Панель пользователя</a>
+    </div>
+    </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
