--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,67 +1,61 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <title>Панель пользователя</title>
+    <title>User</title>
+    <link href="https://cdn.misdeliver.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 </head>
-
-<nav class="navbar navbar-dark sticky-center bg-dark flex-md-nowrap p-0 shadow">
-    <div style="height: 50px;">
-    <h2 class="text-white mb-0">
-        <span class="nav_text_bold" th:text="'Логин: ' + ${user.getUsername()} +', роли: ' + ${user.roleToString()}"/>
-    </h2>
+<body>
+<!--Navigation-->
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">
+            <a id="headerUserName"></a>
+            <a> с ролями: </a>
+            <a id="headerRole"></a>
+        </span>
+        <a class="nav-link text-right" href="/logout">Выйти</a>
     </div>
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-            <a class="nav-link nav_logout" th:href="@{/logout}">Выход</a>
-        </li>
-    </ul>
-   
 </nav>
-
-<div class="container-fluid h-100">
-    <div class="row h-100">
-        <div class="col-md-2 g-0 py-3">
-            <ul class="nav nav-pills flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#" id="user-nav-link" data-bs-toggle="tab"
-                       data-bs-target="#user-panel"
-                       type="button" role="tab" aria-controls="user-panel" aria-selected="false">Пользователь</a>
-                </li>
-            </ul>
+<div class="d-flex align-items-start">
+    <!--Sidebar-->
+    <div class="col-2">
+        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link active" id="v-pills-user-tab" data-bs-toggle="pill" href="#v-pills-user" role="tab"
+               aria-controls="v-pills-user" aria-selected="false">Пользователь</a>
         </div>
-        <div class="col-md-10 bg-light gx-5 py-3 tab-content">
-            <div class="tab-pane fane show active" id="user-panel" role="tabpanel"
-                 aria-labelledby="user-nav-link" tabindex="0">
-                <h2>Информация о пользователе</h2>
-                <div class="tab-content" role="tabpanel" aria-labelledby="admin-nav-link">
-                    <div class="tab-pane fade show active" role="tabpanel" tabindex="0">
-                        <div class="card">
-                            <h5 class="card-header">О пользователе</h5>
-                            <div class="card-body text-center">
-                                <table class="table table-striped">
-                                    <thead>
-                                    <tr>
-                                        <th scope="col">ID</th>
-                                        <th scope="col">Имя</th>
-                                        <th scope="col">Фамилия</th>
-                                        <th scope="col">Email</th>
-                                        <th scope="col">Роли</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td th:text="${user.getId()}"></td>
-                                        <td th:text="${user.getName()}"></td>
-                                        <td th:text="${user.getLastName()}"></td>
-                                        <td th:text="${user.getEmail()}"></td>
-                                        <td th:text="${user.roleToString()}"></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+    </div>
+    <!--Main Content-->
+    <div class="col-10">
+        <div class="tab-content bg-light" id="v-pills-tabContent">
+            <!--User's Information-->
+            <div class="tab-pane fade show active" id="v-pills-user" role="tabpanel" aria-labelledby="v-pills-user-tab">
+                <div class="container-fluid">
+                    <br>
+                    <h1>Информационная страница</h1>
+                    <div class="card w-55">
+                        <div class="card-header d-flex align-items-center">
+                            <span>О пользователе</span>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Имя</th>
+                                    <th>Фамилия</th>
+                                    <th>Пароль</th>
+                                    <th>Email</th>
+                                    <th>Логин</th>
+                                    <th>Роли</th>
+                                </tr>
+                                </thead>
+                                <tbody id="userTable">
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -69,7 +63,15 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="../static/AuthUserInfo.js"></script>
+</body>
 </html>
-
